@@ -1,29 +1,35 @@
+<div>
+    <a href="https://travis-ci.org/pjfl/p5-html-accessors"><img src="https://travis-ci.org/pjfl/p5-html-accessors.svg?branch=master" alt="Travis CI Badge"></a>
+    <a href="http://badge.fury.io/pl/HTML-Accessors"><img src="https://badge.fury.io/pl/HTML-Accessors.svg" alt="CPAN Badge"></a>
+    <a href="http://cpants.cpanauthors.org/dist/HTML-Accessors"><img src="http://cpants.cpanauthors.org/dist/HTML-Accessors.png" alt="Kwalitee Badge"></a>
+</div>
+
 # Name
 
 HTML::Accessors - Generate HTML elements
 
 # Version
 
-Describes version v0.11.$Rev: 0 $ of [HTML::Accessors](https://metacpan.org/module/HTML::Accessors)
+Describes version v0.12.$Rev: 3 $ of [HTML::Accessors](https://metacpan.org/pod/HTML::Accessors)
 
 # Synopsis
 
     use HTML::Accessors;
 
-    my $my_obj = HTML::Accessors->new();
+    my $hacc = HTML::Accessors->new();
 
     # Create an anchor element
-    $anchor = $my_obj->a( { href => 'http://...' }, 'This is a link' );
+    $anchor = $hacc->a( { href => 'http://...' }, 'This is a link' );
 
 # Description
 
-Uses [HTML::GenerateUtil](https://metacpan.org/module/HTML::GenerateUtil) to create an autoload method for each of
-the elements defined by [HTML::Tagset](https://metacpan.org/module/HTML::Tagset). The API was loosely taken
-from [CGI](https://metacpan.org/module/CGI). Using the [CGI](https://metacpan.org/module/CGI) module is undesirable in a [Catalyst](https://metacpan.org/module/Catalyst)
+Uses [HTML::GenerateUtil](https://metacpan.org/pod/HTML::GenerateUtil) to create an autoload method for each of
+the elements defined by [HTML::Tagset](https://metacpan.org/pod/HTML::Tagset). The API was loosely taken
+from [CGI](https://metacpan.org/pod/CGI). Using the [CGI](https://metacpan.org/pod/CGI) module is undesirable in a [Catalyst](https://metacpan.org/pod/Catalyst)
 application (run from the development server) due go greediness issues
 over STDIN.
 
-The returned tags are either XHTML 1.1 or HTML 4.01 compliant.
+The returned tags are either XHTML 1.1 or HTML 5 compliant.
 
 # Configuration and Environment
 
@@ -39,32 +45,32 @@ The constructor defines accessors and mutators for one attribute:
 
 ## new
 
-    my $my_obj = HTML::Accessors->new( content_type => q(application/xhtml+xml) );
+    my $hacc = HTML::Accessors->new( content_type => 'application/xhtml+xml' );
 
-Uses ["\_arg\_list"](#\_arg\_list) to process the passed options
+Uses `_hashify` to process the passed options
 
 ## content\_type
 
-    $content_type = $self->content_type( $new_type );
+    $content_type = $hacc->content_type( $new_type );
 
 Accessor / mutator for the `content_type` attribute
 
 ## escape\_html
 
-    my $escaped_html = $my_obj->escape_html( $unescaped_html );
+    my $escaped_html = $hacc->escape_html( $unescaped_html );
 
-Expose the method [escape\_html](https://metacpan.org/module/HTML::GenerateUtil#FUNCTIONS)
+Expose the method [escape\_html](https://metacpan.org/pod/HTML::GenerateUtil#FUNCTIONS)
 
 ## is\_xml
 
-    my $bool = $my_obj->is_xml;
+    my $bool = $hacc->is_xml;
 
 Returns true if the returned tags will be XHTML. Matches the string _.xml_
 at the end of the _content\_type_
 
 ## popup\_menu
 
-    my $html = $my_obj->popup_menu( default => $value, labels => {}, values => [] );
+    my $html = $hacc->popup_menu( default => $value, labels => {}, values => [] );
 
 Returns the `<select>` element. The first option passed to
 `popup_menu` is either a hash ref or a list of key/value pairs. The keys are:
@@ -92,8 +98,8 @@ Returns the `<select>` element. The first option passed to
 The rest of the keys and values are passed as attributes to the
 `<select>` element. For example:
 
-    $ref = { default => 1, name => q(my_field), values => [ 1, 2 ] };
-    $my_obj->popup_menu( $ref );
+    $ref = { default => 1, name => 'my_field', values => [ 1, 2 ] };
+    $hacc->popup_menu( $ref );
 
 would return:
 
@@ -151,7 +157,7 @@ For example:
                           4 => q(Button Four), },
              name    => q(my_field),
              values  => [ 1, 2, 3, 4 ] };
-    $my_obj->radio_group( $ref );
+    $hacc->radio_group( $ref );
 
 would return:
 
@@ -178,8 +184,8 @@ be returned from the popup menu
 
 ## AUTOLOAD
 
-Uses [HTML::Tagset](https://metacpan.org/module/HTML::Tagset) to check if the requested method is a known HTML
-element. If it is `AUTOLOAD` uses [HTML::GenerateUtil](https://metacpan.org/module/HTML::GenerateUtil) to create the tag
+Uses [HTML::Tagset](https://metacpan.org/pod/HTML::Tagset) to check if the requested method is a known HTML
+element. If it is `AUTOLOAD` uses [HTML::GenerateUtil](https://metacpan.org/pod/HTML::GenerateUtil) to create the tag
 
 If the first option is a hash ref then the keys and values are copied
 and passed to `HTML::GenerateUtil::generate_tag` which uses them to
@@ -191,7 +197,7 @@ If the requested element exists in the hard coded list of input
 elements, then the element is set to `input` and the mapped value
 used as the type attribute in the call to `generate_tag`. For example;
 
-    $my_obj->textfield( { default => q(default value), name => q(my_field) } );
+    $hacc->textfield( { default => 'default value', name => 'my_field' } );
 
 would return
 
@@ -201,33 +207,33 @@ The list of input elements contains; button, checkbox, hidden,
 image\_button, password\_field, radio\_button, submit, and textfield
 
 Carp and return `undef` if the element does not exist in list of known
-[elements](https://metacpan.org/module/HTML::Tagset#isKnown)
+[elements](https://metacpan.org/pod/HTML::Tagset#isKnown)
 
 ## DESTROY
 
 Implement the `DESTROY` method so that the `AUTOLOAD` method doesn't get
 called instead
 
-## \_arg\_list
+## \_hash\_merge
+
+Simplistic merging of two hashes
+
+## \_hashify
 
 Returns a hash ref containing the passed parameter list. Enables
 methods to be called with either a list or a hash ref as it's input
 parameters. Makes copies as it goes so that you can change the contents
 without altering the parameters if they were passed by reference
 
-## \_hash\_merge
-
-Simplistic merging of two hashes
-
 # Diagnostics
 
-[Carp](https://metacpan.org/module/Carp#carp) is called to issue a warning about undefined elements
+[Carp](https://metacpan.org/pod/Carp#carp) is called to issue a warning about undefined elements
 
 # Dependencies
 
-- [Class::Accessor::Fast](https://metacpan.org/module/Class::Accessor::Fast)
-- [HTML::GenerateUtil](https://metacpan.org/module/HTML::GenerateUtil)
-- [HTML::Tagset](https://metacpan.org/module/HTML::Tagset)
+- [Class::Accessor::Fast](https://metacpan.org/pod/Class::Accessor::Fast)
+- [HTML::GenerateUtil](https://metacpan.org/pod/HTML::GenerateUtil)
+- [HTML::Tagset](https://metacpan.org/pod/HTML::Tagset)
 
 # Incompatibilities
 
@@ -235,9 +241,12 @@ There are no known incompatibilities in this module
 
 # Bugs and Limitations
 
-There are no known bugs in this module.
-Please report problems to the address below.
-Patches are welcome
+There are no known bugs in this module. Please report problems to
+http://rt.cpan.org/NoAuth/Bugs.html?Dist=HTML-Accessors.  Patches are welcome
+
+# Acknowledgements
+
+Larry Wall - For the Perl programming language
 
 # Author
 
@@ -249,10 +258,10 @@ Larry Wall - For the Perl programming language
 
 # License and Copyright
 
-Copyright (c) 2013 Peter Flanigan. All rights reserved.
+Copyright (c) 2015 Peter Flanigan. All rights reserved.
 
 This program is free software; you can redistribute it and/or modify it
-under the same terms as Perl itself. See [perlartistic](https://metacpan.org/module/perlartistic).
+under the same terms as Perl itself. See [perlartistic](https://metacpan.org/pod/perlartistic).
 
 This program is distributed in the hope that it will be useful,
 but WITHOUT WARRANTY; without even the implied warranty of
