@@ -2,7 +2,7 @@ name = HTML-Accessors
 
 [Prereqs]
 perl               = 5.01
-HTML::GenerateUtil = 1.10
+HTML::GenerateUtil = 1.20
 HTML::Tagset       = 3.20
 
 [Prereqs / ConfigureRequires]
@@ -31,16 +31,35 @@ license           = http://dev.perl.org/licenses/
 homepage          = https://metacpan.org/author/PJFL
 bugtracker.web    = http://rt.cpan.org/NoAuth/Bugs.html?Dist=HTML-Accessors
 bugtracker.mailto = bug-HTML-Accessors@rt.cpan.org
+repository.url    = git://github.com/pjfl/p5-html-accessors.git
+repository.web    = http://github.com/pjfl/p5-html-accessors
+repository.type   = git
+
+[ReadmeAnyFromPod / ReadmeMarkdownInRoot]
+filename          = README.md
+location          = root
+type              = markdown
+
+[Run::BeforeBuild]
+run               = cp .build.PL Build.PL
+
+[CopyFilesFromBuild]
+copy              = Build.PL
+move              = cpanfile
+
+[GatherDir]
+exclude_filename  = cpanfile
 
 ; So apparently order matters
 [ReadmeAnyFromPod]
 [Signature]
-[GatherDir]
 [AbstractFromPOD]
 [LicenseFromModule]
 [VersionFromModule]
 [ModuleBuild::Custom]
+[CPANFile]
 [License]
+[MetaConfig]
 [MetaJSON]
 [MetaYAML]
 [ManifestInRoot]
